# macrocoder-site

./: .env.example  .gitignore  README.md  check_names_upgraded.py  docker-compose.yml  email-inbound-automation-platform.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wrangler.toml
backend/: .env.example  Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  base.py
backend/app/routers/: analyze.py  auth.py  post_hire.py
backend/app/services/: agent.py  auth.py  cache.py  github.py  post_hire_service.py  rate_limit.py  review_service.py  safe_http.py  ssrf.py  worker.py
backend/app/toolkit/: __init__.py  abuse_guard.py  config.py  credit_guard.py  intent_router.py  job_post_extractor.py  models.py  red_flag_detector.py  repo_profiler.py  scope_reducer.py  sensitive_data_scrubber.py  seriousness_scorer.py  url_guard.py  website_extractor.py
backend/app/toolkit/post_hire/: __init__.py  architecture_mapper.py  cli.py  (+12 more)
backend/macrocoder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/post_hire_toolkit/: test_exporter.py
python scripts/lead_review_toolkit_plus/: README.md  examples.py  pyproject.toml
python scripts/lead_review_toolkit_plus/tests/: test_plus_addons.py  test_smoke.py
python scripts/lead_review_toolkit_plus/toolkit/: __init__.py  cache_manager.py  cli.py  exceptions.py  faq_rules.py  quote_versioner.py
python scripts/post_hire_toolkit/: README.md  examples.py  pyproject.toml
python scripts/post_hire_toolkit/post_hire_toolkit/: api_contract_extractor.py  decision_log_extractor.py  dependency_audit.py  docs_digest.py  exceptions.py  hetzner_exporter.py  models.py  performance_hotspot_finder.py  security_posture_snapshot.py  upsell_opportunity_finder.py
python scripts/post_hire_toolkit/tests/: test_notes_and_risks.py  test_pipeline.py
(+84 files in other folders)
