[project]
name = "macrocoder-backend"
version = "0.1.0"
description = "Autonomous AI agent for GitHub repository analysis"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "anthropic>=0.45.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "arq>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.4.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
