[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-review-toolkit"
version = "0.1.0"
description = "Backend toolkit for project review, pricing, screening, and quote generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["toolkit*"]
