[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-hire-analysis-toolkit"
version = "0.1.0"
description = "Post-hire project analysis toolkit with JSON outputs and Hetzner export support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["post_hire_toolkit", "post_hire_toolkit.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
